/users/me/phone/ - change phone, /users/me/password/ - change password, /users/me/password/reset/ - reset password
